src/patternfly/components/Toolbar/toolbar.scss
/* ... */
// Divider
.pf-c-toolbar__content-section,
.pf-c-toolbar__group {
  // set this var here so specificity is 20
  > .pf-c-divider {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar--c-divider--m-vertical--spacer);
  }

  > .pf-c-divider.pf-m-vertical {
    margin-right: var(--pf-c-toolbar--spacer);

    &:last-child {
      --pf-c-toolbar--spacer: 0;
    }
  }
}

// Group
.pf-c-toolbar__group {
  --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--spacer);

  display: flex;
  align-items: center;
  margin-right: var(--pf-c-toolbar--spacer);
  row-gap: var(--pf-c-toolbar__group--RowGap);

  // Button group
  &.pf-m-button-group {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-button-group--spacer);

    > * {
      --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-button-group--space-items);
    }
  }

  // Icon button group
  &.pf-m-icon-button-group {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-icon-button-group--spacer);

    > * {
      --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-icon-button-group--space-items);
    }
  }

  // Filter group
  &.pf-m-filter-group {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-filter-group--spacer);

    > * {
      --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-filter-group--space-items);
    }

    > * + * {
      margin-left: -1px;
    }
  }

  // Toggle group
  &.pf-m-toggle-group {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--m-toggle-group--spacer);

    &,
    .pf-c-toolbar__group {
      flex-wrap: nowrap;
    }

    .pf-c-toolbar__group,
    .pf-c-toolbar__item {
      display: none;
      visibility: hidden;
    }

    .pf-c-toolbar__toggle {
      display: inline-block;
      visibility: visible;
    }
  }

  // &:last-child must always come last for spacing system to work properly, as it has the same specificity as the preceding modifiers
  &:last-child {
    --pf-c-toolbar--spacer: 0;
  }
}

// Item
.pf-c-toolbar__item {
  --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--spacer);

  margin-right: var(--pf-c-toolbar--spacer);

  // Overflow menu
  &.pf-m-overflow-menu {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--m-overflow-menu--spacer);
  }

  // Bulk select
  &.pf-m-bulk-select {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--m-bulk-select--spacer);
  }

  // Expand
  &.pf-m-expand-all.pf-m-expanded {
    --pf-c-toolbar__expand-all-icon--Rotate: var(--pf-c-toolbar__item--m-expand-all--m-expanded__expand-all-icon--Rotate);
  }

  // Search filter
  &.pf-m-search-filter {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--m-search-filter--spacer);
  }

  // Search filter
  &.pf-m-chip-group {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--m-chip-group--spacer);
  }

  // Label
  &.pf-m-label {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--m-label--spacer);

    font-weight: var(--pf-c-toolbar__item--m-label--FontWeight);
  }

  // Total items
  &.pf-m-pagination {
    margin-left: auto;

    .pf-c-pagination {
      flex-wrap: nowrap;
    }
  }

  // &:last-child must always come last for spacing system to work properly, as it has the same specificity as the preceding modifiers
  &:last-child {
    --pf-c-toolbar--spacer: 0;
  }
}

.pf-c-toolbar__expand-all-icon {
  display: inline-block;
  transition: var(--pf-c-toolbar__expand-all-icon--Transition);
  transform: rotate(var(--pf-c-toolbar__expand-all-icon--Rotate));
}

.pf-c-toolbar__content,
.pf-c-toolbar__content-section {
  display: flex;
  flex-wrap: wrap;
  align-items: center;
}

// Content
.pf-c-toolbar__content {
  position: relative;
  padding-right: var(--pf-c-toolbar__content--PaddingRight);
  padding-left: var(--pf-c-toolbar__content--PaddingLeft);
}

// Content section
.pf-c-toolbar__content-section {
  width: 100%;
  row-gap: var(--pf-c-toolbar__content-section--RowGap);
}

// Expandable content
.pf-c-toolbar__expandable-content {
  position: absolute;
  top: 100%;
  right: 0;
  left: 0;
  z-index: var(--pf-c-toolbar__expandable-content--ZIndex);
  display: none;
  width: 100%;
  padding: var(--pf-c-toolbar__expandable-content--PaddingTop) var(--pf-c-toolbar__expandable-content--PaddingRight) var(--pf-c-toolbar__expandable-content--PaddingBottom) var(--pf-c-toolbar__expandable-content--PaddingLeft);
  visibility: hidden;
  background-color: var(--pf-c-toolbar__expandable-content--BackgroundColor);
  box-shadow: var(--pf-c-toolbar__expandable-content--BoxShadow);

  @media screen and (min-width: $pf-global--breakpoint--lg) {
    position: static;
    box-shadow: none;
  }

  &.pf-m-expanded {
    display: grid;
    grid-row-gap: var(--pf-c-toolbar__expandable-content--m-expanded--GridRowGap);
    visibility: visible;
  }

  .pf-c-toolbar__group,
  .pf-c-toolbar__item {
    --pf-c-toolbar--spacer: 0;
  }

  .pf-c-toolbar__group {
    display: grid;
    grid-row-gap: var(--pf-c-toolbar__expandable-content--m-expanded--GridRowGap);
  }

  .pf-m-label {
    display: none;
    visibility: hidden;
  }
}

// Chip container
// extend chip container layout access to __content to allow custom configurations
.pf-c-toolbar__content.pf-m-chip-container,
.pf-c-toolbar__group.pf-m-chip-container {
  display: flex;
  flex-wrap: wrap;
  align-items: baseline;
  margin-top: var(--pf-c-toolbar__group--m-chip-container--MarginTop);
  grid-row-gap: 0;

  .pf-c-toolbar__item {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__item--spacer);

    margin-top: var(--pf-c-toolbar__group--m-chip-container__item--MarginTop);
  }

  .pf-c-toolbar__group {
    --pf-c-toolbar--spacer: var(--pf-c-toolbar__group--spacer);

    display: flex;
    flex-wrap: wrap;
    grid-row-gap: 0;
  }

  .pf-c-toolbar__group:last-child,
  .pf-c-toolbar__item:last-child {
    --pf-c-toolbar--spacer: 0;
  }
}

.pf-c-toolbar .pf-c-chip-group:last-child {
  --pf-c-chip-group--MarginRight: 0;
}

.pf-c-toolbar .pf-c-chip-group li:last-child {
  --pf-c-chip-group__li--m-toolbar--MarginRight: 0;
}
/* ... */

